# fibchain

./: Cargo.toml  README.md
apps/: Cargo.toml
apps/src/: main.rs  prelude.rs
apps/src/app/: mod.rs
apps/src/app/resources/: fibonacci.rs  mod.rs
apps/src/app/use_case/: fibonacci.rs
apps/src/domain/: provider.rs
apps/src/infra/: app_state.rs  error.rs  mod.rs  observability.rs  sol.rs
apps/src/infra/provider/: fibonacci_ethereum.rs  fibonacci_risc_zero.rs  mod.rs
apps/src/routes/: mod.rs
contracts/: Fibonacci.sol  IFibonacci.sol
local-infra/: docker-compose.yml
local-infra/config/: otel-collector-config.yaml  tempo.yaml
methods/guest/: Cargo.toml
script/: Deploy.s.sol
