[package]
name = "apps"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
methods = { workspace = true }
risc0-ethereum-contracts = { workspace = true }
risc0-zkvm = { workspace = true, default-features = true }

tokio = { version = "1.35", features = ["full"] }

axum = { version = "0.8.1", features = ["macros"] }
serde = { version = "1.0.218", features = ["derive"] }

alloy = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }

url = { workspace = true }
hex = { version = "0.4.3" }

anyhow = { workspace = true }
log = { workspace = true }
env_logger = { version = "0.11.6" }
