[package]
name = "apps"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
methods = { workspace = true }

tokio = { version = "1.35", features = ["full"] }

axum = { version = "0.8.1", features = ["macros"] }
serde = { version = "1.0.218", features = ["derive"] }

alloy = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
risc0-ethereum-contracts = { workspace = true }
risc0-zkvm = { workspace = true, default-features = true }

url = { workspace = true }
hex = { version = "0.4.3" }

tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

dotenvy = { version = "0.15.7" }
color-eyre = { version = "0.6.3" }
thiserror = { version = "2.0.11" }
async-trait = { version = "0.1.86" }
